[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "llmjson"
version = "2.0.0"
authors = [
    {name = "lihao77", email = "qingyuepei@foxmail.com"},
]
description = "一个用于大语言模型生成JSON数据的Python包"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "json", "generator", "openai", "knowledge-graph", "nlp"]
dependencies = [
    "openai>=1.35.0",
    "json-repair>=0.25.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.7.0",
    "requests>=2.31.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/lihao77/llmjson"
"Bug Reports" = "https://github.com/lihao77/llmjson/issues"
Source = "https://github.com/lihao77/llmjson"
Documentation = "https://llmjson.readthedocs.io/"

[project.scripts]
llmgen = "llmjson.cli:main"
llmjson = "llmjson.cli:main"

[tool.setuptools]
packages = ["llmjson"]

[tool.setuptools.package-data]
llmjson = ["*.md", "*.txt", "*.json"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true